--- a/src/main/resources/css/style.css
+++ b/src/main/resources/css/style.css
@@ -14,7 +14,7 @@
     -fx-border-image-insets: 5px;
 
     -fx-border-image-source: url('../textures/textpanel_corner.png');
-    -fx-border-image-slice: 26ada fill;
+    -fx-border-image-slice: 26 fill;
     -fx-border-image-width: 26;
     -fx-border-image-repeat: stretch;
 }
