--- a/src/main/resources/title.fxml
+++ b/src/main/resources/title.fxml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-
 <!--
   ~ Copyright (c) 2024 u-donbei
   ~
@@ -13,26 +8,36 @@
   ~ see https://www.eclipse.org/legal/epl-2.0/
   -->
 
-<BorderPane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" stylesheets="@css/title.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jp.u_donbei.udon_pasuta.controller.TitleController">
-   <center>
-      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="BOTTOM_CENTER">
-         <children>
-            <Button fx:id="start" alignment="CENTER" mnemonicParsing="false" onAction="#handleStart" style="-fx-background-color: #ffffff00;" text="スタート" textAlignment="CENTER" textFill="WHITE">
-               <font>
-                  <Font size="50.0" />
-               </font>
-            </Button>
-            <Button fx:id="setting" mnemonicParsing="false" onAction="#handleSetting" style="-fx-background-color: #ffffff00;" text="設定" textFill="WHITE">
-               <font>
-                  <Font size="50.0" />
-               </font>
-            </Button>
-            <Button fx:id="exit" mnemonicParsing="false" onAction="#handleExit" style="-fx-background-color: #ffffff00;" text="終了" textFill="WHITE">
-               <font>
-                  <Font size="50.0" />
-               </font>
-            </Button>
-         </children>
-      </VBox>
-   </center>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<BorderPane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+			prefHeight="500.0" prefWidth="800.0" stylesheets="@css/title.css" xmlns="http://javafx.com/javafx/22"
+			xmlns:fx="http://javafx.com/fxml/1" fx:controller="jp.udonbei.udonpasuta.controller.TitleController">
+	<center>
+		<VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="BOTTOM_CENTER">
+			<children>
+				<Button fx:id="start" alignment="CENTER" mnemonicParsing="false" onAction="#handleStart"
+						style="-fx-background-color: #ffffff00;" text="スタート" textAlignment="CENTER"
+						textFill="WHITE">
+					<font>
+						<Font size="50.0"/>
+					</font>
+				</Button>
+				<Button fx:id="setting" mnemonicParsing="false" onAction="#handleSetting"
+						style="-fx-background-color: #ffffff00;" text="設定" textFill="WHITE">
+					<font>
+						<Font size="50.0"/>
+					</font>
+				</Button>
+				<Button fx:id="exit" mnemonicParsing="false" onAction="#handleExit"
+						style="-fx-background-color: #ffffff00;" text="終了" textFill="WHITE">
+					<font>
+						<Font size="50.0"/>
+					</font>
+				</Button>
+			</children>
+		</VBox>
+	</center>
 </BorderPane>
